[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Control.gd" type="Script" id=1]

[node name="DiaUI" type="Control"]
visible = false
light_mask = 131072
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="DiaHolder" type="ColorRect" parent="."]
margin_left = 39.0
margin_top = 475.0
margin_right = 977.0
margin_bottom = 581.0
color = Color( 0.101961, 0.0862745, 0.0862745, 0.54902 )

[node name="DiaText" type="RichTextLabel" parent="DiaHolder"]
margin_top = 12.0
margin_right = 937.0
margin_bottom = 93.0
bbcode_enabled = true

[node name="NamesUI" type="ColorRect" parent="DiaHolder"]
margin_left = 1.0
margin_top = -23.0
margin_right = 151.0
margin_bottom = 1.0
color = Color( 0.0509804, 0.0392157, 0.0392157, 0.470588 )

[node name="NamesLabel" type="Label" parent="DiaHolder/NamesUI"]
margin_top = 5.0
margin_right = 149.0
margin_bottom = 23.0
